syntax = "proto3";


option go_package = "./product";

package product;


service ProductService {
 
  rpc GetProductForBasket (GetProductRequest) returns (ProductResponse);
  rpc GetProductsByIds (GetProductsByIdsRequest) returns (GetProductsByIdsResponse);
}

message GetProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32  stock = 4;
  bool   is_active = 5;
  string image_url = 6; 
  string seller_id = 7; 
}
message GetProductsByIdsRequest {
  repeated string ids = 1;
}

message GetProductsByIdsResponse {
  repeated ProductResponse products = 1;
}

//protoc --go_out=. --go-grpc_out=. product.proto